objects/FscBot_LostCard__c.object
<CustomObject>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>LostCards</relationshipLabel>
        <relationshipName>LostCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LostCards</relationshipLabel>
        <relationshipName>LostCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>FinancialAccountNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Lost Card</label>
    <nameField>
        <label>LostCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lost Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>